# dj-pypi

./: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml
.github/workflows/: build_image.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
dj_pypi/: asgi.py  settings.py  urls.py  wsgi.py
docker/: initscript.sh
legacy_upload/: admin.py  apps.py  forms.py  models.py  storage_backend.py  upload_handler.py  views.py
legacy_upload/migrations/: 0001_initial.py
legacy_upload/templates/legacy_upload/: upload_form.html
projects/: admin.py  models.py  validators.py
projects/migrations/: 0001_initial.py
simple_index/: apps.py  views.py
simple_index/templates/simple_index/: package_index.html  project_index.html
templates/: base.html
token_auth/: admin.py  auth_backend.py  middleware.py  models.py
token_auth/migrations/: 0001_initial.py
