[tool.poetry]
# this is not a real package, but convinient for testing
name = "dj-pypi"
version = "0.1.0"
description = ""
authors = ["Ferdinand Hoffmann <fh@local>"]
readme = "README.md"
packages = [{include = "dj_pypi"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
preview = true


[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
